chore: update fpm issue link
Signed-off-by: Dominic Hock <d.hock@it-hock.de>

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: IT-Hock Support
-    url: mailto:support@it-hock.de
+    url: https://it-hock.de/kontakt/
     about: Please only use for business inquiries.
   - name: FPM Bugs/Feature Reporting
-    url: https://github.com/IT-Hock/fpm/issues
+    url: https://github.com/IT-Hock/fpm/issues/new/choose
     about: Please report issues with the fish package manager here.
