chore: page layout changes

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -63,10 +63,10 @@ jobs:
         run: cd util && go build -o ../_pages/util
 
       - name: Run util
-        run: cd _pages && ./util -o ./_data -i ../packages.json ci
+        run: cd _pages && ./util -o ./_data -p ../packages -t ../themes ci
       
       - name: Setup Ruby
-        uses: ruby/setup-ruby@ee2113536afb7f793eed4ce60e8d3b26db912da4 # v1.127.0
+        uses: ruby/setup-ruby@v1.133.2
         with:
           ruby-version: '3.0' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
